2006-03-15  Pavel Tsekov  <ptsekov@gmx.net>

	* editlock.c: Fix for savannah bug #13673.
	(lock_build_symlink_name): New function.
	(edit_lock_file): Use lock_build_symlink_name().
	(edit_unlock_file): Likewise.

2006-03-15  Pavel Tsekov  <ptsekov@gmx.net>

	* editcmd.c (edit_new_cmd): Remove redundant call to
	`edit_unlock_file()'.
	(edit_ok_to_exit): Likewise.

2006-02-10  Roland Illig  <roland.illig@gmx.de>

	* edit.c (user_menu): There is no need to prefix the filename
	with PATH_SEP when calling concat_dir_and_file().

2006-02-03  Roland Illig  <roland.illig@gmx.de>

	* edit.h: Removed the leading PATH_SEP_STR from EDIT_DIR, as the
	latter is not an absolute directory.
	* edit.c: Adjusted the users of EDIT_DIR.
	* editcmd.c: Likewise.
	* syntax.c: Likewise.
	* src/user.c: Likewise.

2006-02-02  Leonard den Ottolander  <leonard den ottolander nl>

	* edit.c (edit_execute_cmd): Reload syntax on toggle to on.

2006-02-01  Andy Shevchenko  <andy@pylesos.interdon.net>

	* edit.c, editcmddef.h, editkeys.c: Add Ctrl-S to toggle syntax
	highlighting. Patch from unnamed MPlayer developer.

2006-01-30  Pavel Tsekov  <ptsekov@gmx.net>

	* editcmd.c: Do not set the field `histname' of `QuickWidget'
	unless the widget is of type `quick_input'.

2006-01-27  Pavel Tsekov  <ptsekov@gmx.net>

	* editcmd.c (edit_block_copy_cmd): Allow a block of selected
	columns	as created by Shift + F3 to be copied anywhere in
	the editor area.

2006-01-26  Oswald Buddenhagen <ossi@kde.org>

	* edit.c (edit_auto_indent): Remove redundant parameters.
	Change the indentation strategy to copy whitespace
	from the previous line instead of filling up with allegedly
	equivalent whitespace depending on the tab setting.
	(edit_execute_cmd): Accomodate change of parameters to
	edit_auto_indent().

2005-11-22  Leonard den Ottolander  <leonard den ottolander nl>

	* editcmd.c (edit_replace_dialog): Alt-p is in use for the
	previous entry. Use Alt-m on pro&Mpt.

2005-11-10  Pavel Roskin  <proski@gnu.org>